@@ -1,3 +1,8 @@
+Thu Nov 13 22:32:34 2014  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>
+
+	* lib/rexml/document.rb: add REXML::Document#document.
+	  reported by Tomas Hoger <thoger@redhat.com> and patched by nahi.
+
 Thu Nov  6 22:57:43 2014  Naohisa Goto  <ngotogenome@gmail.com>
 
 	* bignum.c (absint_numwords_generic): set an array element after
